--- a/50paskaita-02.29-BandWeb/public/index.html
+++ b/50paskaita-02.29-BandWeb/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <title>Band Web</title>
+    <script src="https://kit.fontawesome.com/c92e9e6410.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
